Correcting z-index issue w/ stream controls.

--- a/styles.css
+++ b/styles.css
@@ -358,7 +358,7 @@ ul.notecards li + li {
 	margin-top: 80px;
 	position: absolute;
 	background: #fff;
-	z-index: 1;
+	z-index: 2;
 }
 
 #content #stream:before {
